--- a/index.html
+++ b/index.html
@@ -1,48 +1,74 @@
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="styles.css">
-        <title>Sketch Canvas</title>
-    </head>
-    <body>
-        <h1>Draw your first phantom!</h1>
-        <div class="size-buttons">
-            <button id="size-small">Small</button>
-            <button id="size-medium">Medium</button>
-            <button id="size-large">Large</button>
+<!DOCTYPE html>
+<!-- Coding By CodingNepal - youtube.com/codingnepal -->
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Drawing App JavaScript | CodingNepal</title>
+    <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="script.js" defer></script>
+  </head>
+  <body>
+    <div class="container">
+      <section class="tools-board">
+        <div class="row">
+          <label class="title">Shapes</label>
+          <ul class="options">
+            <li class="option tool" id="rectangle">
+              <img src="icons/rectangle.svg" alt="">
+              <span>Rectangle</span>
+            </li>
+            <li class="option tool" id="circle">
+              <img src="icons/circle.svg" alt="">
+              <span>Circle</span>
+            </li>
+            <li class="option tool" id="triangle">
+              <img src="icons/triangle.svg" alt="">
+              <span>Triangle</span>
+            </li>
+            <li class="option">
+              <input type="checkbox" id="fill-color">
+              <label for="fill-color">Fill color</label>
+            </li>
+          </ul>
         </div>
-        <div class="sketch-container">
-            <canvas id="sketch-canvas" width="800" height="600"></canvas>
-            <div class="controls">
-                <input type="color" id="color-picker" value="#000000">
-                <input type="range" id="brush-size" min="1" max="20" value="5">
-                <button id="clear-canvas">Clear</button>
-            </div>
-            <div class="fill-options">
-                <label>
-                    <input type="radio" name="fill-color" value="#ff0000" checked>
-                    Red
-                </label>
-                <label>
-                    <input type="radio" name="fill-color" value="#00ff00">
-                    Green
-                </label>
-                <label>
-                    <input type="radio" name="fill-color" value="#0000ff">
-                    Blue
-                </label>
-                <label>
-                    <input type="radio" name="fill-color" value="#ffff00">
-                    Yellow
-                </label>
-                <label>
-                    <input type="radio" name="fill-color" value="#ff00ff">
-                    Magenta
-                </label>
-            </div>
-            
+        <div class="row">
+          <label class="title">Options</label>
+          <ul class="options">
+            <li class="option active tool" id="brush">
+              <img src="icons/brush.svg" alt="">
+              <span>Brush</span>
+            </li>
+            <li class="option tool" id="eraser">
+              <img src="icons/eraser.svg" alt="">
+              <span>Eraser</span>
+            </li>
+            <li class="option">
+              <input type="range" id="size-slider" min="1" max="30" value="5">
+            </li>
+          </ul>
         </div>
-        <script src="script.js"></script>
-    </body>
+        <div class="row colors">
+          <label class="title">Colors</label>
+          <ul class="options">
+            <li class="option"></li>
+            <li class="option selected"></li>
+            <li class="option"></li>
+            <li class="option"></li>
+            <li class="option">
+              <input type="color" id="color-picker" value="#4A98F7">
+            </li>
+          </ul>
+        </div>
+        <div class="row buttons">
+          <button class="clear-canvas">Clear Canvas</button>
+          <button class="save-img">Save As Image</button>
+        </div>
+      </section>
+      <section class="drawing-board">
+        <canvas></canvas>
+      </section>
+    </div>
+    
+  </body>
 </html>
