--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
   <head>
     <meta charset="utf-8">
     <title>Drawing App JavaScript | CodingNepal</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="script.js" defer></script>
+    
   </head>
   <body>
     <div class="container">
@@ -15,32 +16,25 @@
           <label class="title">Shapes</label>
           <ul class="options">
             <li class="option tool" id="rectangle">
-              <img src="icons/rectangle.svg" alt="">
-              <span>Rectangle</span>
+                <img src="./icons/icons/rectangle.svg" alt="">
+                <span>Fill Shape</span>
             </li>
-            <li class="option tool" id="circle">
-              <img src="icons/circle.svg" alt="">
-              <span>Circle</span>
-            </li>
-            <li class="option tool" id="triangle">
-              <img src="icons/triangle.svg" alt="">
-              <span>Triangle</span>
-            </li>
-            <li class="option">
-              <input type="checkbox" id="fill-color">
-              <label for="fill-color">Fill color</label>
-            </li>
+            <form id="colorForm">
+                <label style="background-color: #00FF00; color: #000000;"><input type="radio" name="colour" value="#00FF00"></input> Green</label>
+                <label style="background-color: #FF0000;"><input type="radio" name="colour" value="#FF0000" checked></input> Red</label>
+                <label style="background-color: #0000FF;"><input type="radio" name="colour" value="#0000FF"></input> Blue</label>
+            </form>
           </ul>
         </div>
         <div class="row">
           <label class="title">Options</label>
           <ul class="options">
             <li class="option active tool" id="brush">
-              <img src="icons/brush.svg" alt="">
+              <img src="./icons/icons/brush.svg" alt="">
               <span>Brush</span>
             </li>
             <li class="option tool" id="eraser">
-              <img src="icons/eraser.svg" alt="">
+              <img src="./icons/icons/eraser.svg" alt="">
               <span>Eraser</span>
             </li>
             <li class="option">
