--- a/index.html
+++ b/index.html
@@ -13,6 +13,20 @@
     <div class="container">
       <section class="tools-board">
         <div class="row">
+          <label class="title">Canvas Size</label>
+          <div class="input">
+              <label for="canvas-width">Width:</label>
+              <input type="number" id="canvas-width" min="100" max="800" value="500">
+          </div>
+          <div class="input">
+              <label for="canvas-height">Height:</label>
+              <input type="number" id="canvas-height" min="100" max="800" value="600">
+          </div>
+          <div class="row buttons">
+            <button id="resize-canvas">Resize Canvas</button>
+          </div>
+        </div>    
+        <div class="row">
           <label class="title">Layers</label>
           <ul class="options">
             <li class="option tool" id="rectangle">
